@@ -1,7 +1,10 @@
-div.info.underline
-  p Throttle is a simple web-based utility that allows developers to modify the <a href="http://www.freebsd.org/doc/en_US.ISO8859-1/books/handbook/firewalls-ipfw.html">ipfw</a> rules on a shared computer to test network performance.
-  | While the focus of the project is mobile, Throttle can be used to test desktop websites as well. Throttle was created by Dave Olsen
-  | of West Virginia University and was inspired by <a href="https://github.com/marstall/shim/">shim</a>.
-  p The presets are derived from Apple's Network Link Conditioner tool and Guy Podjarny's presentation, <a href="http://www.slideshare.net/guypod/the-mobile-difference-in-numbers">The Mobile Difference in Numbers</a>. 
-  p Throttle uses <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> and <a href="http://glyphicons.com/">Glyphicons</a> for design elements.
-  p <a href="/">Return to main page >></a>
+extends layout
+
+block mainContent
+  div.info.underline
+    p Throttle is a simple web-based utility that allows developers to modify the <a href="http://www.freebsd.org/doc/en_US.ISO8859-1/books/handbook/firewalls-ipfw.html">ipfw</a> rules on a shared computer to test network performance.
+    | While the focus of the project is mobile, Throttle can be used to test desktop websites as well. Throttle was created by Dave Olsen
+    | of West Virginia University and was inspired by <a href="https://github.com/marstall/shim/">shim</a>.
+    p The presets are derived from Apple's Network Link Conditioner tool and Guy Podjarny's presentation, <a href="http://www.slideshare.net/guypod/the-mobile-difference-in-numbers">The Mobile Difference in Numbers</a>. 
+    p Throttle uses <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> and <a href="http://glyphicons.com/">Glyphicons</a> for design elements.
+    p <a href="/">Return to main page >></a>
