@@ -19,4 +19,5 @@ html
         div#trash 
           i.icon-ban-circle
           a(href="/remove/") Turn Throttle Off
-      div#content!= body
+      div#content
+        block mainContent
